syntax = "proto3";

option csharp_namespace = "GrpcHelloWorld.Protobuf";

package grpcHelloWorld;

service ChatService {
  rpc SendMessage (MessageRequest) returns (MessageReply);
  rpc MessageFeed (MessageFeedRequest) returns (stream MessageFeedResponse);
}

// SendMessage
message MessageRequest {
  string nick_name = 1;
  string message = 2;
}
message MessageReply {}

// MessageFeed
message MessageFeedRequest {
  string nick_name = 1;
}
message MessageFeedResponse {
  string nick_name = 1;
  string message = 2;
  int64 time_received = 3;
}
